--- a/Mixture_of_Expert.ipynb
+++ b/Mixture_of_Expert.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP1KvetcQLImMXa3rgzGYDh",
+      "authorship_tag": "ABX9TyNQmSKonSSrsMzHYe0Gd0e0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -719,7 +719,7 @@
         },
         "outputId": "22545ef5-855c-4662-ce51-b28dd055ec24"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -745,7 +745,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -785,7 +785,7 @@
       "metadata": {
         "id": "mKUo0F8zMCaJ"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -809,7 +809,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -838,7 +838,7 @@
         },
         "outputId": "7cbe2378-4d13-4c1a-db56-8434997c8ce4"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -863,32 +863,99 @@
       "cell_type": "code",
       "source": [
         "#create a class for TopKRouting\n",
-        "class TopKRouter(nn.Module):\n",
-        "  super(TopKRouter,self).__init__()\n",
-        "  self.top_k = top_k\n",
-        "  self.linear = nn.Linear(n_embed,num_experts)\n",
+        "class TopKRouter(nn.Module): #output is expert selector weight matrix\n",
+        "  def __init__(self,n_embed,num_experts,top_k):\n",
+        "    super(TopKRouter,self).__init__()\n",
+        "    self.top_k = top_k\n",
+        "    self.linear = nn.Linear(n_embed,num_experts)\n",
         "\n",
         "  def forward(self,mh_output): #mh_output is the output tensor of MHA\n",
         "    logits = self.linear(mh_output) #get logits from the output\n",
         "    top_k_logits, indices = logits.topk(self.top_k,dim=-1) #get top k logits\n",
-        "    zeros = torch.full_like(logits,float('-inf')) #fill the logits matrix with infinity\n",
+        "    zeros = torch.full_like(logits,float('-inf')) #fill the logits matrix with - infinity. -infinity indicate to get zero probability from Softmax\n",
         "    sparse_logits = zeros.scatter(-1,indices,top_k_logits) #get sparse logits across last index\n",
         "    router_output = F.softmax(sparse_logits,dim=-1) # take a softmax of the sparse logits along last dimension\n",
-        "    return router_output , indices\n"
+        "    #print(router_output)\n",
+        "    #print(indices)\n",
+        "    return router_output , indices"
       ],
       "metadata": {
         "id": "IlzSQn3VZSip"
       },
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#test expert selector weight matrix\n",
+        "num_experts = 3\n",
+        "top_k = 2\n",
+        "n_embd = 8\n",
+        "\n",
+        "mh_output = torch.randn(1,4,n_embd)\n",
+        "top_k_gate = TopKRouter(n_embd,num_experts,top_k)\n",
+        "gating_output , indices = top_k_gate(mh_output)\n",
+        "gating_output.shape , gating_output , indices"
+      ],
       "metadata": {
-        "id": "_TuXUqZ3ZSr0"
+        "id": "_TuXUqZ3ZSr0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0665561b-3c94-480f-c106-066969089ede"
       },
-      "execution_count": null,
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(torch.Size([1, 4, 3]),\n",
+              " tensor([[[0.5260, 0.0000, 0.4740],\n",
+              "          [0.6873, 0.0000, 0.3127],\n",
+              "          [0.4291, 0.0000, 0.5709],\n",
+              "          [0.2302, 0.0000, 0.7698]]], grad_fn=<SoftmaxBackward0>),\n",
+              " tensor([[[0, 2],\n",
+              "          [0, 2],\n",
+              "          [2, 0],\n",
+              "          [2, 0]]]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Noisy TopK Routing\n",
+        "class NoisyTopkRouter(nn.Module):\n",
+        "  def __init__(self,n_embd,num_experts,top_k):\n",
+        "    super(NoisyTopkRouter,self).__init__()\n",
+        "    self.top_k = top_k\n",
+        "    self.topkroute_linear = nn.Linear(n_embd,num_experts)\n",
+        "    self.noise_linear = nn.Linear(n_embd,num_experts)\n",
+        "\n",
+        "  def forward(self,mh_output):\n",
+        "    logits = self.topkroute_linear(mh_output)\n",
+        "    noise_logits = self.noise_linear(mh_output)\n",
+        "\n",
+        "    #Added scale unit gaussian noise to logits\n",
+        "    noise = torch.randn_like(logits)*F.softplus(noise_logits)\n",
+        "    noisy_logits = logits + noise\n",
+        "\n",
+        "    top_k_logits, indices = noisy_logits.topk(self.top_k,dim=-1)\n",
+        "    zeros = torch.full_like(noisy_logits,float('-inf'))\n",
+        "    sparse_logits = zeros.scatter(-1,indices,top_k_logits)\n",
+        "    router_output = F.softmax(sparse_logits,dim=-1)\n",
+        "    return router_output , indices"
+      ],
+      "metadata": {
+        "id": "VBfIgkikmjY-"
+      },
+      "execution_count": 36,
       "outputs": []
     }
   ]
