--- a/Mixture_of_Expert.ipynb
+++ b/Mixture_of_Expert.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNQmSKonSSrsMzHYe0Gd0e0",
+      "authorship_tag": "ABX9TyO+SHalt6D7kfjE6UM0VLs+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -882,7 +882,7 @@
       "metadata": {
         "id": "IlzSQn3VZSip"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -905,7 +905,7 @@
         },
         "outputId": "0665561b-3c94-480f-c106-066969089ede"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -955,7 +955,146 @@
       "metadata": {
         "id": "VBfIgkikmjY-"
       },
-      "execution_count": 36,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#test expert selector weight matrix\n",
+        "num_experts = 3\n",
+        "top_k = 2\n",
+        "n_embd = 8\n",
+        "\n",
+        "mh_output = torch.randn(1,4,n_embd)\n",
+        "top_k_gate = NoisyTopkRouter(n_embd,num_experts,top_k)\n",
+        "gating_output , indices = top_k_gate(mh_output)\n",
+        "gating_output.shape , gating_output , indices"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bTLaEWjUoGjG",
+        "outputId": "9afdc99d-cfca-4410-85f6-e06e0f41f44b"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(torch.Size([1, 4, 3]),\n",
+              " tensor([[[0.3014, 0.6986, 0.0000],\n",
+              "          [0.3265, 0.6735, 0.0000],\n",
+              "          [0.0000, 0.7636, 0.2364],\n",
+              "          [0.7285, 0.0000, 0.2715]]], grad_fn=<SoftmaxBackward0>),\n",
+              " tensor([[[1, 0],\n",
+              "          [1, 0],\n",
+              "          [1, 2],\n",
+              "          [0, 2]]]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Create a Sparse\n",
+        "class SparseMoE(nn.Module):\n",
+        "  def __init__(self,n_embed,num_experts,top_k):\n",
+        "    super(SparseMoE,self).__init__()\n",
+        "    self.router = NoisyTopkRouter(n_embed,num_experts,top_k)\n",
+        "    self.experts = nn.ModuleList([Expert(n_embd) for _ in range(num_experts)])\n",
+        "    self.top_k = top_k\n",
+        "\n",
+        "  def forward(self,x):\n",
+        "    gating_output , indices = self.router(x)\n",
+        "    final_output = torch.zeros_like(x)\n",
+        "\n",
+        "    #Reshape inputs for batch processing\n",
+        "    flat_x = x.view(-1,x.size(-1))\n",
+        "    flat_gating_output = gating_output.view(-1,gating_output.size(-1))\n",
+        "\n",
+        "    #Process each expert in parallel\n",
+        "    for i , expert in enumerate(self.experts):\n",
+        "      #Create a mask for the inputs where the current expert is in top-k\n",
+        "      expert_mask = (indices==i).any(dim=-1)\n",
+        "      flat_mask = expert_mask.view(-1)\n",
+        "\n",
+        "      if flat_mask.any():\n",
+        "        expert_input = flat_x[flat_mask]\n",
+        "        expert_output = expert(expert_input)\n",
+        "\n",
+        "        #extract and apply gating scores\n",
+        "        gating_scores = flat_gating_output[flat_mask,i].unsqueeze(1)\n",
+        "        weighted_output = expert_output * gating_scores\n",
+        "\n",
+        "        #Update final output additively by indexing and adding\n",
+        "        final_output[expert_mask] += weighted_output.squeeze(1)\n",
+        "    return final_output"
+      ],
+      "metadata": {
+        "id": "81e0vlzxoe4l"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "\n",
+        "#test\n",
+        "num_experts = 3\n",
+        "top_k = 2\n",
+        "n_embd = 8\n",
+        "dropout = 0.1\n",
+        "\n",
+        "mh_output = torch.randn(1,4,n_embd) #example multi head attention output\n",
+        "sparse_moe = SparseMoE(n_embd,num_experts,top_k)\n",
+        "final_output = sparse_moe(mh_output)\n",
+        "print(\"Shape of the final output:\", final_output.shape)\n",
+        "print(final_output)"
+      ],
+      "metadata": {
+        "id": "IkG2FifsxwE1",
+        "outputId": "96f49375-6f98-4004-89d8-2ae3aa83a55f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Shape of the final output: torch.Size([1, 4, 8])\n",
+            "tensor([[[-1.9496e-01,  1.8509e-01,  2.3671e-01, -1.5535e-02,  5.7476e-03,\n",
+            "           1.6367e-01,  9.8544e-02, -5.0809e-01],\n",
+            "         [ 2.7110e-01, -1.3715e-01,  2.8878e-01,  5.8346e-02,  2.8772e-01,\n",
+            "          -3.5969e-01,  7.4497e-02, -2.8631e-01],\n",
+            "         [-3.0152e-01,  2.6477e-01,  2.6787e-02,  1.3593e-01, -4.2620e-01,\n",
+            "          -4.9825e-02,  1.7425e-01, -6.3358e-01],\n",
+            "         [ 3.8096e-02,  7.7251e-02,  1.6521e-01, -1.0990e-01, -1.6329e-01,\n",
+            "          -1.3077e-01, -3.2078e-04, -1.4358e-01]]],\n",
+            "       grad_fn=<IndexPutBackward0>)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "_b5wUqVRofDr"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
