--- a/Mixture_of_Expert.ipynb
+++ b/Mixture_of_Expert.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO+SHalt6D7kfjE6UM0VLs+",
+      "authorship_tag": "ABX9TyPyzkxXEim/yO4lih+ZIbz3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1040,7 +1040,7 @@
       "metadata": {
         "id": "81e0vlzxoe4l"
       },
-      "execution_count": null,
+      "execution_count": 55,
       "outputs": []
     },
     {
@@ -1063,34 +1063,102 @@
       ],
       "metadata": {
         "id": "IkG2FifsxwE1",
-        "outputId": "96f49375-6f98-4004-89d8-2ae3aa83a55f",
+        "outputId": "c286d426-5888-40d9-851d-bd4843908b1d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 54,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Shape of the final output: torch.Size([1, 4, 8])\n",
-            "tensor([[[-1.9496e-01,  1.8509e-01,  2.3671e-01, -1.5535e-02,  5.7476e-03,\n",
-            "           1.6367e-01,  9.8544e-02, -5.0809e-01],\n",
-            "         [ 2.7110e-01, -1.3715e-01,  2.8878e-01,  5.8346e-02,  2.8772e-01,\n",
-            "          -3.5969e-01,  7.4497e-02, -2.8631e-01],\n",
-            "         [-3.0152e-01,  2.6477e-01,  2.6787e-02,  1.3593e-01, -4.2620e-01,\n",
-            "          -4.9825e-02,  1.7425e-01, -6.3358e-01],\n",
-            "         [ 3.8096e-02,  7.7251e-02,  1.6521e-01, -1.0990e-01, -1.6329e-01,\n",
-            "          -1.3077e-01, -3.2078e-04, -1.4358e-01]]],\n",
-            "       grad_fn=<IndexPutBackward0>)\n"
+            "tensor([[[-0.1968, -0.3543,  0.0732,  0.1506,  0.2441,  0.3536, -0.4259,\n",
+            "          -0.1872],\n",
+            "         [ 0.0088, -0.0156, -0.1499,  0.1224,  0.1413,  0.3381, -0.0819,\n",
+            "          -0.3227],\n",
+            "         [ 0.0673, -0.2312, -0.1596,  0.1600,  0.1402,  0.0184, -0.4008,\n",
+            "          -0.0051],\n",
+            "         [ 0.0705,  0.4552, -0.1179,  0.1549,  0.1253,  0.2140, -0.0466,\n",
+            "           0.0488]]], grad_fn=<IndexPutBackward0>)\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#Putting all MOE together\n",
+        "class Expert(nn.Module):\n",
+        "  def __init__(self,n_embd):\n",
+        "    super().__init__()\n",
+        "    self.net = nn.Sequential(\n",
+        "        nn.Linear(n_embd,4*n_embd),\n",
+        "        nn.ReLU(),\n",
+        "        nn.Linear(4*n_embd,n_embd),\n",
+        "        nn.Dropout(dropout),\n",
+        "    )\n",
+        "  def forward(self,x):\n",
+        "    return self.net(x)\n",
+        "\n",
+        "#Noisy TopK Routing\n",
+        "class NoisyTopkRouter(nn.Module):\n",
+        "  def __init__(self,n_embd,num_experts,top_k):\n",
+        "    super(NoisyTopkRouter,self).__init__()\n",
+        "    self.top_k = top_k\n",
+        "    self.topkroute_linear = nn.Linear(n_embd,num_experts)\n",
+        "    self.noise_linear = nn.Linear(n_embd,num_experts)\n",
+        "\n",
+        "  def forward(self,mh_output):\n",
+        "    logits = self.topkroute_linear(mh_output)\n",
+        "    noise_logits = self.noise_linear(mh_output)\n",
+        "\n",
+        "    #Added scale unit gaussian noise to logits\n",
+        "    noise = torch.randn_like(logits)*F.softplus(noise_logits)\n",
+        "    noisy_logits = logits + noise\n",
+        "\n",
+        "    top_k_logits, indices = noisy_logits.topk(self.top_k,dim=-1)\n",
+        "    zeros = torch.full_like(noisy_logits,float('-inf'))\n",
+        "    sparse_logits = zeros.scatter(-1,indices,top_k_logits)\n",
+        "    router_output = F.softmax(sparse_logits,dim=-1)\n",
+        "    return router_output , indices\n",
+        "\n",
+        "#Create a Sparse\n",
+        "class SparseMoE(nn.Module):\n",
+        "  def __init__(self,n_embed,num_experts,top_k):\n",
+        "    super(SparseMoE,self).__init__()\n",
+        "    self.router = NoisyTopkRouter(n_embed,num_experts,top_k)\n",
+        "    self.experts = nn.ModuleList([Expert(n_embd) for _ in range(num_experts)])\n",
+        "    self.top_k = top_k\n",
+        "\n",
+        "  def forward(self,x):\n",
+        "    gating_output , indices = self.router(x)\n",
+        "    final_output = torch.zeros_like(x)\n",
+        "\n",
+        "    #Reshape inputs for batch processing\n",
+        "    flat_x = x.view(-1,x.size(-1))\n",
+        "    flat_gating_output = gating_output.view(-1,gating_output.size(-1))\n",
+        "\n",
+        "    #Process each expert in parallel\n",
+        "    for i , expert in enumerate(self.experts):\n",
+        "      #Create a mask for the inputs where the current expert is in top-k\n",
+        "      expert_mask = (indices==i).any(dim=-1)\n",
+        "      flat_mask = expert_mask.view(-1)\n",
+        "\n",
+        "      if flat_mask.any():\n",
+        "        expert_input = flat_x[flat_mask]\n",
+        "        expert_output = expert(expert_input)\n",
+        "\n",
+        "        #extract and apply gating scores\n",
+        "        gating_scores = flat_gating_output[flat_mask,i].unsqueeze(1)\n",
+        "        weighted_output = expert_output * gating_scores\n",
+        "\n",
+        "        #Update final output additively by indexing and adding\n",
+        "        final_output[expert_mask] += weighted_output.squeeze(1)\n",
+        "    return final_output"
+      ],
       "metadata": {
         "id": "_b5wUqVRofDr"
       },
