--- a/Mixture_of_Expert.ipynb
+++ b/Mixture_of_Expert.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPyzkxXEim/yO4lih+ZIbz3",
+      "authorship_tag": "ABX9TyMEeRfGczHnIxq0J5h2BUX8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1040,7 +1040,7 @@
       "metadata": {
         "id": "81e0vlzxoe4l"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1068,7 +1068,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1162,7 +1162,125 @@
       "metadata": {
         "id": "_b5wUqVRofDr"
       },
-      "execution_count": null,
+      "execution_count": 57,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#construct the transformer block\n",
+        "\n",
+        "class Head(nn.Module):\n",
+        "  \"\"\" one head of self-attention\"\"\"\n",
+        "\n",
+        "  def __init__(self, head_size):\n",
+        "    super().__init__()\n",
+        "    self.key = nn.Linear(n_embd, head_size, bias=False)\n",
+        "    self.query = nn.Linear(n_embd, head_size, bias=False)\n",
+        "    self.value = nn.Linear(n_embd, head_size, bias=False)\n",
+        "    self.register_buffer('tril', torch.tril(torch.ones(block_size, block_size)))\n",
+        "\n",
+        "    self.dropout = nn.Dropout(dropout)\n",
+        "\n",
+        "  def forward(self,x):\n",
+        "    B,T,C = x.shape\n",
+        "    k = self.key(x) #(B,T,C)\n",
+        "    q = self.query(x) #(B,T,C)\n",
+        "\n",
+        "    #compute attention scores(\"affinities\")\n",
+        "    wei = q @ k.transpose(-2,-1) * C**-0.5 #(B,T,C) @ (B,C,T) ---> (B,T,T)\n",
+        "    wei.masked_fill(self.tril[:T,:T] == 0,float('-inf')) # (B,T,T) #causality\n",
+        "    wei = F.softmax(wei,dim=-1) # (B,T,T)\n",
+        "    wei = self.dropout(wei)\n",
+        "    #perform the weighted aggregation of the values\n",
+        "    v = self.value(x) #(B,T,C)\n",
+        "    out = wei @ v #(B,T,T) @ (B,T,C) ---> (B,T,C)\n",
+        "    return out\n",
+        "\n",
+        "class MultiHeadAttention(nn.Module):\n",
+        "  \"\"\"multiple heads of self-attention in parallel\"\"\"\n",
+        "  def __init__(self,num_heads,head_size):\n",
+        "    super().__init__()\n",
+        "    self.heads = nn.ModuleList([Head(head_size) for _ in range(num_heads)])\n",
+        "    self.proj = nn.Linear(n_embd,n_embd)\n",
+        "    self.dropout = nn.Dropout(dropout)\n",
+        "\n",
+        "  def forward(self,x):\n",
+        "    out = torch.cat([h(x) for h in self.heads],dim=-1)\n",
+        "    out = self.dropout(self.proj(out))\n",
+        "    return out"
+      ],
+      "metadata": {
+        "id": "iPxjmOWD1sMg"
+      },
+      "execution_count": 62,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#first create a self attention + mixture of experts block , that may be repeated several numbe of times\n",
+        "class Block(nn.Module):\n",
+        "  \"\"\" Mixture of Experts Transformer block: communication followed by computation(multi-head self attention + SparseMoE) \"\"\"\n",
+        "  def __init__(self,n_embd,num_experts,top_k):\n",
+        "    #n_embd: embedding dimension, n_head: number of heads we'd like\n",
+        "    super().__init__()\n",
+        "    head_size = n_embd // n_head\n",
+        "    self.sa = MultiHeadAttention(n_head,head_size)\n",
+        "    self.smoe = SparseMoE(n_embd,num_experts,top_k)\n",
+        "    self.ln1 = nn.LayerNorm(n_embd)\n",
+        "    self.ln2 = nn.LayerNorm(n_embd)\n",
+        "\n",
+        "  def forward(self,x):\n",
+        "    x = x + self.sa(self.ln1(x)) #multi head attention layer and then layer normalization(short cut connection)\n",
+        "    x = x + self.smoe(self.ln2(x)) # MOE followed by layer normalization (shorcut connection)\n",
+        "    return x"
+      ],
+      "metadata": {
+        "id": "fth22f_r-PZY"
+      },
+      "execution_count": 64,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Define the entire language model architecture\n",
+        "#finally putting it together to create a sparse MOE language model\n",
+        "class SparseMoeLanguageModel(nn.Module):\n",
+        "  def __init__(self):\n",
+        "    super().__init__()\n",
+        "    #each token directly reads off the logits for the next token from a lookup table\n",
+        "    self.token_embedding_table = nn.Embedding(vocab_size,n_embed)\n",
+        "    self.position_embedding_table = nn.Embedding(block_size,n_embed)\n",
+        "    self.blocks = nn.Sequential(*[Block(n_embd,n_head=n_head,num_experts = num_experts,top_k = top_k) for _ in range(n_layer)])\n",
+        "    self.ln_f = nn.LayerNorm(n_embd) #final layer norm\n",
+        "    self.lm_head = nn.Linear(n_embd,vocab_size)\n",
+        "\n",
+        "  def forward(self,idx,targets=None):\n",
+        "    B,T = idx.shape\n",
+        "    #idx and targets are both (B,T) tensor of integers\n",
+        "    tok_emb = self.token_embedding_table(idx) #(B,T,C)\n",
+        "    pos_emb = self.position_embedding_table(torch.arange(T,device=device)) #(T,C)\n",
+        "    x = tok_emb + pos_emb # (B,T,C)\n",
+        "    x = self.blocks(x) #\n",
+        "    x= self.ln_f(x)\n",
+        "    logits = self.lm_head(x) # (B,T,vocab_size)\n",
+        "\n",
+        "    if targets is None:\n",
+        "      loss = None\n",
+        "    else:\n",
+        "      B,T,C = logits.shape\n",
+        "      logits = logits.view(B*T,C)\n",
+        "      targets = targets.view(B*T)\n",
+        "      loss = F.cross_entropy(logits,targets)\n",
+        "\n",
+        "    return logits,loss"
+      ],
+      "metadata": {
+        "id": "Ya--1zY7ABuq"
+      },
+      "execution_count": 65,
       "outputs": []
     }
   ]
