--- a/Mixture_of_Expert.ipynb
+++ b/Mixture_of_Expert.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMZMazCTbMEFDR2F/Cc/Swu",
+      "authorship_tag": "ABX9TyO17fLegiWbMLCWLIU1201m",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1556,25 +1556,175 @@
         "out.shape"
       ],
       "metadata": {
-        "id": "pJWw46a-10HQ",
-        "outputId": "04520e77-de17-48a3-a0a5-5cdac3663239",
+        "id": "pJWw46a-10HQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n_embd = 64\n",
+        "n_head = 4\n",
+        "n_layer = 4\n",
+        "head_size = 16\n",
+        "dropout = 0.1\n",
+        "\n",
+        "class Head(nn.Module):\n",
+        "  \"\"\" one head of self-attention\"\"\"\n",
+        "\n",
+        "  def __init__(self,head_size):\n",
+        "    super().__init__()\n",
+        "    self.key = nn.Linear(n_embd,head_size,bias=False)\n",
+        "    self.query = nn.Linear(n_embd,head_size,bias=False)\n",
+        "    self.value = nn.Linear(n_embd,head_size,bias=False)\n",
+        "    self.register_buffer('tril',torch.tril(torch.ones(block_size,block_size)))\n",
+        "    self.dropout = nn.Dropout(dropout)\n",
+        "\n",
+        "  def forward(self,x):\n",
+        "    B,T,C = x.shape\n",
+        "    k = self.key(x) #(B,T,C)\n",
+        "    q = self.query(x) #(B,T,C)\n",
+        "    #compute attention scores\n",
+        "    wei = q @ k.transpose(-2,-1)*C**-0.5 #B,T,C  @(B,C,T) -> (B,T,T)\n",
+        "    wei = wei.masked_fill(self.tril[:T,:T] == 0,float('-inf')) # (B,T,T)\n",
+        "    wei = F.softmax(wei,dim=-1)\n",
+        "    wei = self.dropout(wei)\n",
+        "    #perform the weighted aggregation of the values\n",
+        "    v = self.value(x) #(B,T,C)\n",
+        "    out = wei @ v #(B,T,T) @ (B,T,C) ---> (B,T,C)\n",
+        "    return out\n"
+      ],
+      "metadata": {
+        "id": "UzdDmcrx4p67"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#multi-headed self attention\n",
+        "class MultiHeadAttention(nn.Module):\n",
+        "\n",
+        "  def __init__(self,num_heads,head_size):\n",
+        "    super().__init__()\n",
+        "    self.heads = nn.ModuleList([Head(head_size) for _ in range(num_heads)])\n",
+        "    self.proj = nn.Linear(n_embd,n_embd)\n",
+        "    self.dropout = nn.Dropout(dropout)\n",
+        "\n",
+        "  def forward(self,x):\n",
+        "    out = torch.cat([h(x) for h in self.heads],dim=-1)\n",
+        "    out = self.dropout(self.proj(out))\n",
+        "    return out"
+      ],
+      "metadata": {
+        "id": "GHIsUKpr59-G"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#confirming that multi head self attention works\n",
+        "B,T,C = 4,8,64\n",
+        "x = torch.randn(B,T,C)\n",
+        "mha = MultiHeadAttention(4,16)\n",
+        "mha(x).shape"
+      ],
+      "metadata": {
+        "id": "FiA5zq3Q6Xri"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Expert module\n",
+        "class Expert(nn.Module):\n",
+        "  \"\"\" Simple MLP for each Expert in MoE \"\"\"\n",
+        "  def __init__(self,n_embd):\n",
+        "    super().__init__()\n",
+        "    self.net = nn.Sequential(\n",
+        "        nn.Linear(n_embd,4*n_embd),\n",
+        "        nn.ReLU(),\n",
+        "        nn.Linear(4*n_embd,n_embd),\n",
+        "        nn.Dropout(droupout),\n",
+        "    )\n",
+        "  def forward (self,x):\n",
+        "    return self.net(x)"
+      ],
+      "metadata": {
+        "id": "JK3A1iFw6tbT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#top-k gating intituion through an example\n",
+        "num_experts = 4\n",
+        "top_k = 2\n",
+        "n_embed = 32 #embedding dimension 32\n",
+        "\n",
+        "#multi-head attention output of a simple illustrative example , consider n_embed = 32 , context_length = 4 and batch_size = 2\n",
+        "mh_output = torch.randn(2,4,32) #(B,Context Length , Token embedding dimension)\n",
+        "\n",
+        "# Linear layer is for affine transformation and the inputs is a Weight MATRIX of size n_embed and num_experts and this matrix is applied on input\n",
+        "topk_gate_linear = nn.Linear(n_embed,num_experts) #(32,4)\n",
+        "logits = topk_gate_linear(mh_output) #(2,4,32)\n",
+        "top_k_logits , top_k_indices = logits.topk(top_k,dim=-1) #get top-k experts\n",
+        "top_k_logits , top_k_indices"
+      ],
+      "metadata": {
+        "id": "WycJsd8Zime0",
+        "outputId": "37e73cac-45e7-457c-9f3f-0e37bed6527d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "torch.Size([4, 8, 16])"
+              "(tensor([[[ 0.1815,  0.1707],\n",
+              "          [ 0.5835, -0.0661],\n",
+              "          [ 1.2988,  0.4973],\n",
+              "          [ 0.0856,  0.0799]],\n",
+              " \n",
+              "         [[ 0.9495,  0.2046],\n",
+              "          [ 0.8876,  0.2152],\n",
+              "          [ 0.5517,  0.2568],\n",
+              "          [ 0.8376, -0.4417]]], grad_fn=<TopkBackward0>),\n",
+              " tensor([[[3, 2],\n",
+              "          [3, 1],\n",
+              "          [3, 1],\n",
+              "          [3, 1]],\n",
+              " \n",
+              "         [[0, 3],\n",
+              "          [2, 0],\n",
+              "          [3, 0],\n",
+              "          [0, 2]]]))"
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 27
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ypcpU0ozlzpS"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
