--- a/Mixture_of_Expert.ipynb
+++ b/Mixture_of_Expert.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNdZ9XKG9pQ45JlF7y/D/aG",
+      "authorship_tag": "ABX9TyOr/RUxg0kQPacqgqJ2N5jz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1659,7 +1659,7 @@
       "metadata": {
         "id": "JK3A1iFw6tbT"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1686,7 +1686,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1731,7 +1731,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1767,7 +1767,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1809,7 +1809,7 @@
       "metadata": {
         "id": "5yhho1nUvEgv"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1832,7 +1832,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1888,7 +1888,7 @@
       "metadata": {
         "id": "8Tps-C6wxpo7"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1910,7 +1910,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1981,7 +1981,7 @@
       "metadata": {
         "id": "5B6fMkQRy8Rb"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2087,7 +2087,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2142,7 +2142,7 @@
       "metadata": {
         "id": "jaz1O41M-uhv"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2211,7 +2211,7 @@
       "metadata": {
         "id": "bFK8_O5-AJsZ"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2235,7 +2235,63 @@
       "metadata": {
         "id": "dP3JzcH7Be1V"
       },
-      "execution_count": 74,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Finally putting it all together to create a sparse MoE labguage model\n",
+        "class SparseMoELM(nn.Module):\n",
+        "  def __init__(self):\n",
+        "    super().__init__()\n",
+        "    self.token_embedding_table = nn.Embedding(vocab_size,n_embd)\n",
+        "    self.position_embedding_table = nn.Embedding(block_size,n_embd)\n",
+        "    self.blocks = nn.Sequential(*[Block(n_embd,n_head = n_head,num_experts = num_experts,top_k = top_k) for _ in range(n_layer)])\n",
+        "    self.ln_f = nn.LayerNorm(n_embd)\n",
+        "    self.lm_head = nn.Linear(n_embd,vocab_size)\n",
+        "\n",
+        "  def forward(self,idx, targets = None):\n",
+        "    B,T = idx.shape\n",
+        "    #idx and targets are both (B,T) tensor of integers\n",
+        "    tok_emb = self.token_embedding_table(idx) #(B,T,C)\n",
+        "    pos_emb = self.position_embedding_table(torch.arange(T,device=device)) #(T,C)\n",
+        "    x = tok_emb + pos_emb #(B,T,C)\n",
+        "    x = self.blocks(x) #(B,T,C)\n",
+        "    x = self.ln_f(x) #(B,T,C)\n",
+        "    logits = self.lm_head(x) #(B,T,vocab_size)\n",
+        "\n",
+        "    if targets is None:\n",
+        "      loss = None\n",
+        "    else:\n",
+        "      B,T,C = logits.shape\n",
+        "      logits = logits.view(B*T,C)\n",
+        "      targets = targets.view(B*T)\n",
+        "      loss = F.cross_entropy(logits,targets)\n",
+        "\n",
+        "    return logits,loss\n",
+        "\n",
+        "  def generate(self,idx,max_new_tokens):\n",
+        "    #idx is (B,T) array of indices in the current context\n",
+        "    for _ in range(max_new_tokens):\n",
+        "      #crop idx to the last block_size tokens\n",
+        "      idx_cond = idx[:,-block_size:]\n",
+        "      #get the predictions\n",
+        "      logits,loss = self(idx_cond)\n",
+        "      #focus only on the last time step\n",
+        "      logits = logits[:,-1,:] #(B,C)\n",
+        "      #apply softmax to get probabilities\n",
+        "      probs = F.softmax(logits,dim=-1) #(B,C)\n",
+        "      #sample from the distribution\n",
+        "      idx_next = torch.multinomial(probs,num_samples=1) #(B,1)\n",
+        "      #append sampled index to the running sequence\n",
+        "      idx = torch.cat((idx,idx_next),dim=1) #(B,T+1)\n",
+        "    return idx"
+      ],
+      "metadata": {
+        "id": "Kh5TtkJaC-ok"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
