--- a/Mixture_of_Expert.ipynb
+++ b/Mixture_of_Expert.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOr/RUxg0kQPacqgqJ2N5jz",
+      "authorship_tag": "ABX9TyOhWSj8c134wKI2gXzwohEx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2110,7 +2110,7 @@
         "    self.value = nn.Linear(n_embd,head_size,bias=False)\n",
         "    self.register_buffer('tril',torch.tril(torch.ones(block_size,block_size)))\n",
         "\n",
-        "    self.dropout = nn.Droput(dropout)\n",
+        "    self.dropout = nn.Dropout(dropout)\n",
         "\n",
         "  def forward(self,x):\n",
         "    B,T,C = x.shape\n",
@@ -2142,7 +2142,7 @@
       "metadata": {
         "id": "jaz1O41M-uhv"
       },
-      "execution_count": null,
+      "execution_count": 79,
       "outputs": []
     },
     {
@@ -2211,7 +2211,7 @@
       "metadata": {
         "id": "bFK8_O5-AJsZ"
       },
-      "execution_count": null,
+      "execution_count": 80,
       "outputs": []
     },
     {
@@ -2235,7 +2235,7 @@
       "metadata": {
         "id": "dP3JzcH7Be1V"
       },
-      "execution_count": null,
+      "execution_count": 81,
       "outputs": []
     },
     {
@@ -2290,6 +2290,35 @@
       ],
       "metadata": {
         "id": "Kh5TtkJaC-ok"
+      },
+      "execution_count": 82,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#weight intialization of model - THIS IS KEY\n",
+        "def kaiming_init_weights(m):\n",
+        "  if isinstance(m,(nn.Linear)):\n",
+        "    init.kaiming_normal_(m.weight)\n",
+        "\n",
+        "#https://www.geeksforgeeks.org/deep-learning/kaiming-initialization-in-deep-learning/\n",
+        "#https://www.geeksforgeeks.org/deep-learning/xavier-initialization/"
+      ],
+      "metadata": {
+        "id": "jVuUufk6EqQ5"
+      },
+      "execution_count": 83,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = SparseMoELM()\n",
+        "model.apply(kaiming_init_weights)"
+      ],
+      "metadata": {
+        "id": "BjptgXSXFBYq"
       },
       "execution_count": null,
       "outputs": []
